--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "three": "^0.182.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/three": "^0.182.0"
   }
 }
