--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rxjs": "^7.8.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "three": "^0.182.0",
