--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "next": "13.4.13",
+    "next": "^16.1.1",
     "postcss": "8.4.27",
     "prettier": "^2.7.1",
     "react": "18.2.0",
@@ -39,10 +39,10 @@
     "rxjs": "^7.8.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "three": "^0.182.0",
-    "typescript": "5.1.6"
+    "three": "^0.182.0"
   },
   "devDependencies": {
-    "@types/three": "^0.182.0"
+    "@types/three": "^0.182.0",
+    "typescript": "^5.9.3"
   }
 }
