--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "rxjs": "^7.8.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
