--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint src/"
   },
   "dependencies": {
+    "@rjsf/core": "^6.1.2",
+    "@rjsf/utils": "^6.1.2",
+    "@rjsf/validator-ajv8": "^6.1.2",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -27,6 +30,7 @@
     "@eslint/js": "^9.39.2",
     "@types/three": "^0.182.0",
     "eslint": "^9.39.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.51.0"
   }
