--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "next": "^16.1.1",
     "postcss": "8.4.27",
+    "posthog-js": "^1.313.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rxjs": "^7.8.2",
